Finishing refactor work